syntax = "proto3";

package chat;

import "google/protobuf/empty.proto";

message Message { string content = 1; }

service ChatService {
  rpc SendMessage(Message) returns (google.protobuf.Empty);
  rpc StreamMessages(google.protobuf.Empty) returns (stream Message);
}
